@@ -1,3 +1,5 @@
+* Fix reference to postProcess() when it's redefined. [jddalton]
+
 * Fix memory leak associated with ActiveX technique. [jddalton, Sebastian Werner]
 
 * Add Fusebox.getMode() and Fusebox.setMode() methods. [jddalton]
